remove deprecated api-doc generation file
