# packages/openapi/src/routes/avs/getAvsStakersByAddress.ts
@@ -1,23 +1,31 @@
 import { openApiErrorResponses } from '../../apiResTypes/errorResponses';
 import z from '../../../../api/src/schema/zod';
-import { AvsAddressSchema } from '../../../../api/src/schema/zod/schemas/avs';
+import {
+    AvsSchema,
+    EthereumAddressSchema,
+} from '../../../../api/src/schema/zod/schemas/avs';
 import { ZodOpenApiOperationObject } from 'zod-openapi';
 import { PaginationQuerySchema } from '../../../../api/src/schema/zod/schemas/paginationQuery';
 
-export const getAllAvsAddresses: ZodOpenApiOperationObject = {
-    operationId: 'getAllAvsAddresses',
-    summary: 'Retrieve all AVS addresses',
-    description: 'Returns a list of all AVS addresses.',
+const EthereumAddressParam = z.object({
+    address: EthereumAddressSchema,
+});
+
+export const getAvsByAddress: ZodOpenApiOperationObject = {
+    operationId: 'getAvsByAddress',
+    summary: 'Retrieve an AVS by address.',
+    description: 'Returns a single AVS record by address.',
     tags: ['AVS'],
     requestParams: {
+        path: EthereumAddressParam,
         query: PaginationQuerySchema,
     },
     responses: {
         '200': {
-            description: 'The list of AVS addresses.',
+            description: 'The AVS record found.',
             content: {
                 'application/json': {
-                    schema: z.array(AvsAddressSchema),
+                    schema: z.array(AvsSchema),
                 },
             },
         },
